--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="min-max">32&deg;C (min) / 34&deg;C (max)</div>
                 <div class="comment">Sunny</div>
                 <div class="img" id="symbol">
-                    <img src="images/sun.png" alt="Sunny" height="100vh" width="100vw">
+                    <img src="sun.png" alt="Sunny" height="100vh" width="100vw">
                 </div>
             </div>
         </div>
