--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
         </div>
         <div class="weather-body">
             <div class="location">
-                <div class="city">Kolkata, IN </div>
+                <div class="city" id="city">Kolkata, IN </div>
                 <div class="date">10 nov (Wednesday),2021</div>
             </div>
             <div class="status">
-                <div class="temp">34&deg;C</div>
+                <div class="temp" id="maintemp">34&deg;C</div>
                 <div class="min-max">32&deg;C (min) / 34&deg;C (max)</div>
                 <div class="comment">Sunny</div>
                 <div class="img" id="symbol">
-                    <img src="sun.png" alt="Sunny" height="100vh" width="100vw">
+                    <img src="images/sun.png" alt="Sunny" height="100vh" width="100vw">
                 </div>
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
