--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="min-max" id="min-max"></div> </div>
                 <div class="comment" id="comment">Sunny</div>
                 <div class="img" id="symbol">
-                    <img src="sun.png" alt="Sunny" height="100vh" width="100vw">
+                    <img id="icon" src="sun.png" alt="Sunny" height="100vh" width="100vw">
                 </div>
             </div>
         </div>
@@ -30,3 +30,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
+ <!-- credits:  https://www.flaticon.com/
+https://www.youtube.com/channel/UCNroURvR5aDcc-SGV4EfkQQ -->
