--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             </div>
         </div>
     </div>
+
+    <div class="khapun_sona">
+        <p id="khapi" >&#169;Subhradip Barik</p>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
